traces/bug_796.txt
examples++-load/medit.cpp:2346: error: DEAD_STORE
  The value written to &plotting (type _Bool) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:2346:3: Write of unused value
2344.     if (nargs[3]) wait= GetAny<bool>((*nargs[3])(stack));
2345.     
2346.     bool plotting = true;   
          ^
2347.     //  drawing part  ------------------------------
2348.     
